# free-generalist

./: .gitignore  LICENSE  README.md  pyproject.toml  run_local_api.sh
infra/: README.md  docker-compose.yaml
notebooks/: browser_use.ipynb  evaluate_generalist.py  evaluate_generalist_v2.ipynb  hf_agents_course_api.ipynb  ollama_probe.ipynb  run_browser.ipynb  run_coder.ipynb  run_generalist.ipynb  run_generalist_v2.ipynb  run_stocks_pipeline.ipynb  run_tool.ipynb  run_web_search.ipynb  test_package.ipynb
src/api_server/: __init__.py  handlers.py  main.py  ollama_proxy.py  ollama_req.json
src/browser/: __init__.py  browser.py  browser_session.py  llm_browser.py  readme.md
src/browser/llms/: session.py
src/browser/search/: web.py
src/clog/: __init__.py
src/generalist/agents/: agent_workflow.py  core.py  workflow.py
src/generalist/agents/workflows/: workflow_base.py  workflow_code.py  workflow_coder.py  workflow_text_processor.py  workflow_web_search.py
src/generalist/agents/workflows/tasks/: execute_tool.py  plan_action.py  reflect.py  reflection_evaluation.py
src/generalist/dialer/: core.py
src/generalist/models/: core.py
src/generalist/openclaw/: llm.py  tool_calling.py
src/generalist/prompt_forming/openclaw/: llm.py  tool_calling.py
src/generalist/prompt_modifiers/: ollama_tool_call.py  openclaw_tool_call.py  utils.py
src/generalist/tools/: __init__.py  audio_transcribe.py  base.py  code.py  data_model.py  file_handling.py  media.py  media_download.py  parser.py  planning.py  summarisers.py  text_processing.py  web_search.py
src/generalist/tools/text_processing/: config.yaml  text_processing.py  utils.py
src/generalist/utils/: clog.py
tests/test_tools/: test_parse_out_tool_call.py  test_web_search.py
