[project]
name = "free-generalist"
version = "0.1.1"
authors = [{name="freelectron", email="good@bad.com"}]
description = "Agent that can do some things without a bank card"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.1",
    "llama-index>=0.12.52",
    "llama-index-llms-ollama>=0.6.2",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "regex>=2025.10.23",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "whisper>=1.1.10",
    "yt-dlp>=2025.10.22",
]

[dependency-groups]
evaluation = [
    "datasets>=4.3.0",
]

