[project]
name = "free-generalist"
version = "0.1.1"
authors = [{name="freelectron", email="good@bad.com"}]
description = "Agent that can do some things without a bank card"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4",
    "ddgs>=9",
    "langchain>=1",
    "langchain-text-splitters>=1",
    "langgraph>=1",
    "llama-index>=0.12.52",
    "llama-index-llms-ollama>=0.6.2",
    "matplotlib>=3",
    "mlflow>=3",
    "openai-whisper>=20250625",
    "pandas>=2",
    "regex>=2025.10.23",
    "requests>=2",
    "torch>=2.9.0",
    "yt-dlp>=2025.10.2",
]

[dependency-groups]
evaluation = [
    "datasets>=4",
]

#TODO
# Add dependency group for the browser: now there is a conflict bwt llama-index and undetected :(

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generalist", "src/browser"]
